--- a/scripts/wg-auto-supervisor.conf
+++ b/scripts/wg-auto-supervisor.conf
@@ -1,7 +1,7 @@
 [unix_http_server]
-file=/wg-auto/wg-auto/.run/supervisor.sock   ; path to socket
-chmod=770                                   ; user and group can read/write
-chown=wg-auto:www-data                      
+file=/wg-auto/wg-auto/.run/supervisor.sock
+chmod=770
+chown=wg-auto:www-data
 
 [supervisord]
 logfile=/wg-auto/wg-auto/logs/supervisord.log
@@ -10,6 +10,7 @@ logfile_backups=5
 loglevel=info
 pidfile=/wg-auto/wg-auto/.run/supervisord.pid
 nodaemon=false
+user=wg-auto
 minfds=1024
 minprocs=200
 
@@ -20,45 +21,52 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///wg-auto/wg-auto/.run/supervisor.sock
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-;; WireGuard Auto Services
+;; Gunicorn (FINAL FIX)
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 [program:wg-auto-gunicorn]
-command=/wg-auto/wg-auto/venv/bin/gunicorn config.wsgi:application \
-    --name wg-auto --workers 3 --bind unix:/wg-auto/wg-auto/.run/wg-auto.sock --timeout 120
 directory=/wg-auto/wg-auto
+command=/wg-auto/wg-auto/venv/bin/gunicorn config.wsgi:application --workers 3 --bind unix:/wg-auto/wg-auto/.run/wg-auto.sock --timeout 120
 user=wg-auto
 autostart=true
 autorestart=true
-redirect_stderr=true
-stdout_logfile=/wg-auto/wg-auto/logs/gunicorn.log
-stdout_logfile_maxbytes=50MB
-stdout_logfile_backups=5
+startsecs=5
 stopsignal=TERM
-environment=PATH="/wg-auto/wg-auto/venv/bin",PYTHONUNBUFFERED="1",VIRTUAL_ENV="/wg-auto/wg-auto/venv",DJANGO_SETTINGS_MODULE="config.settings"
+killasgroup=true
+stopasgroup=true
+stdout_logfile=/wg-auto/wg-auto/logs/gunicorn.log
+stderr_logfile=/wg-auto/wg-auto/logs/gunicorn.err
+environment=PATH="/wg-auto/wg-auto/venv/bin",VIRTUAL_ENV="/wg-auto/wg-auto/venv",DJANGO_SETTINGS_MODULE="config.settings",PYTHONUNBUFFERED="1"
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;; Celery Worker
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 [program:wg-auto-celery]
-command=/wg-auto/wg-auto/venv/bin/celery -A config worker --loglevel=INFO -n celery@%%h
 directory=/wg-auto/wg-auto
+command=/wg-auto/wg-auto/venv/bin/celery -A config worker -l INFO
 user=wg-auto
 autostart=true
 autorestart=true
-redirect_stderr=true
 stdout_logfile=/wg-auto/wg-auto/logs/celery-worker.log
-stdout_logfile_maxbytes=50MB
-stdout_logfile_backups=5
+stderr_logfile=/wg-auto/wg-auto/logs/celery-worker.err
 stopsignal=TERM
-environment=PATH="/wg-auto/wg-auto/venv/bin",PYTHONUNBUFFERED="1",VIRTUAL_ENV="/wg-auto/wg-auto/venv",DJANGO_SETTINGS_MODULE="config.settings"
+environment=PATH="/wg-auto/wg-auto/venv/bin",VIRTUAL_ENV="/wg-auto/wg-auto/venv",DJANGO_SETTINGS_MODULE="config.settings",PYTHONUNBUFFERED="1"
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;; Celery Beat (FINAL – VERIFIED)
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 [program:wg-auto-celery-beat]
-command=/wg-auto/wg-auto/venv/bin/celery -A config beat --loglevel=INFO --scheduler django_celery_beat.schedulers:DatabaseScheduler
 directory=/wg-auto/wg-auto
+command=/wg-auto/wg-auto/venv/bin/celery -A config beat --loglevel=INFO --scheduler django_celery_beat.schedulers:DatabaseScheduler
 user=wg-auto
 autostart=true
 autorestart=true
-redirect_stderr=true
+startsecs=5
+stopwaitsecs=600
+killasgroup=true
+stopasgroup=true
 stdout_logfile=/wg-auto/wg-auto/logs/celery-beat.log
-stdout_logfile_maxbytes=50MB
-stdout_logfile_backups=5
-stopsignal=TERM
-environment=PATH="/wg-auto/wg-auto/venv/bin",PYTHONUNBUFFERED="1",VIRTUAL_ENV="/wg-auto/wg-auto/venv",DJANGO_SETTINGS_MODULE="config.settings"
+stderr_logfile=/wg-auto/wg-auto/logs/celery-beat.err
+environment=PATH="/wg-auto/wg-auto/venv/bin",VIRTUAL_ENV="/wg-auto/wg-auto/venv",DJANGO_SETTINGS_MODULE="config.settings",PYTHONPATH="/wg-auto/wg-auto",PYTHONUNBUFFERED="1"
