--- a/scripts/wg-auto.conf
+++ b/scripts/wg-auto.conf
@@ -1,30 +1,75 @@
 server {
     listen 80;
-    server_name localhost;  # Domain or server IP
+    server_name localhost;
 
-    # Proxy all application requests to Gunicorn via Unix socket
+    # ─────────────────────────────────────────────
+    # Main Django App
+    # ─────────────────────────────────────────────
     location / {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
         proxy_pass http://unix:/wg-auto/wg-auto/.run/wg-auto.sock;
     }
 
-    # Logs
-    access_log /wg-auto/wg-auto/logs/wg-auto_access.log;
-    error_log  /wg-auto/wg-auto/logs/wg-auto_error.log;
+    # ─────────────────────────────────────────────
+# Admin / Jazzmin
+# ─────────────────────────────────────────────
+location /admin/ {
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
 
-    # Serve static files
+    proxy_pass http://unix:/wg-auto/wg-auto/.run/wg-auto.sock;
+
+    # Content Security Policy for Jazzmin + Google Fonts + inline scripts
+    add_header Content-Security-Policy "
+        default-src 'self';
+        script-src 'self' 'unsafe-inline';
+        script-src-elem 'self' 'unsafe-inline';
+        style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+        style-src-elem 'self' 'unsafe-inline' https://fonts.googleapis.com;
+        font-src 'self' https://fonts.gstatic.com;
+        img-src 'self' data:;
+        connect-src 'self';
+        frame-ancestors 'self';
+    " always;
+
+    # Cross-Origin-Opener-Policy
+    add_header Cross-Origin-Opener-Policy "unsafe-none" always;
+}
+
+
+
+    # ─────────────────────────────────────────────
+    # Static files
+    # ─────────────────────────────────────────────
     location /static/ {
         alias /wg-auto/wg-auto/staticfiles/;
+        access_log off;
+        expires 30d;
     }
 
-    # Serve media files
+    # ─────────────────────────────────────────────
+    # Media files
+    # ─────────────────────────────────────────────
     location /media/ {
         alias /wg-auto/wg-auto/media/;
+        access_log off;
+        expires 30d;
     }
 
-    # Max client body size for file uploads
+    # ─────────────────────────────────────────────
+    # Upload size
+    # ─────────────────────────────────────────────
     client_max_body_size 20M;
+
+    # ─────────────────────────────────────────────
+    # Logs
+    # ─────────────────────────────────────────────
+    access_log /wg-auto/wg-auto/logs/wg-auto_access.log;
+    error_log  /wg-auto/wg-auto/logs/wg-auto_error.log;
 }
